--- a/index.css
+++ b/index.css
@@ -2,6 +2,9 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
+    background-image: "girlheader";
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 .header {
   background-color: white;
