--- a/index.css
+++ b/index.css
@@ -6,6 +6,21 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+h2 {
+  position: relative;
+  padding: 1rem 2rem calc(1rem + 10px);
+  background: #fff100;
+}
+
+h2:before {
+  position: absolute;
+  top: -7px;
+  left: -7px;
+  width: 100%;
+  height: 100%;
+  content: '';
+  border: 4px solid #000;
+}
 .header {
   padding: 0 .5em;
 }
